2007-05-16  Edward Hervey  <edward@fluendo.com>

	* ext/libpng/gstpngdec.c: (user_endrow_callback), (user_read_data):
	Fix build on macosx.

2007-05-16  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/raw1394/gstdv1394src.c: (gst_dv1394src_uri_set_uri):
	Replace direct comparison of a string with the string literal "" with
	a comparison of the first character with '\0'. Fixes #438926.

2007-05-15  Stefan Kost  <ensonic@users.sf.net>

	* gst/debug/breakmydata.c (gst_break_my_data_init):
	  One more try. This should be the proper fix now.

2007-05-15  Stefan Kost  <ensonic@users.sf.net>

	* gst/debug/breakmydata.c:
	  Ooops, no // comments please.

2007-05-15  Stefan Kost  <ensonic@users.sf.net>

	* gst/debug/breakmydata.c: (gst_break_my_data_class_init),
	(gst_break_my_data_init):
	  Fix gst_buffer_is_writable() assertion.

2007-05-14  David Schleef  <ds@schleef.org>

	* sys/v4l2/gstv4l2src.c: Add support for Bayer images as
	  video/x-raw-bayer.  Fixes #314160.

2007-05-14  Wim Taymans  <wim@fluendo.com>

	* gst/rtp/gstrtptheoradepay.c: (decode_base64),
	(gst_rtp_theora_depay_parse_configuration):
	* gst/rtp/gstrtptheorapay.c: (encode_base64),
	(gst_rtp_theora_pay_finish_headers),
	(gst_rtp_theora_pay_handle_buffer):
	Update theora pay/depayloader in a similar to vorbis.

	* gst/rtp/gstrtpvorbisdepay.c:
	(gst_rtp_vorbis_depay_parse_configuration):
	Update docs.

2007-05-14  Wim Taymans  <wim@fluendo.com>

	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_send):
	When we try to execute a method that is not supported by the server,
	don't error out but remove the method from the accepted methods so that
	we never try to perform this method again.

2007-05-14  Wim Taymans  <wim@fluendo.com>

	* gst/rtp/gstrtpvorbisdepay.c: (gst_rtp_vorbis_depay_process):
	Remove annoying _dump_mem.

2007-05-14  Wim Taymans  <wim@fluendo.com>

	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_parse_range):
	Parse range correctly.

	* gst/rtsp/rtspurl.c: (rtsp_url_get_request_uri):